force-app/main/default/objects/Bid__c/Bid__c.object-meta.xml
<CustomObject>
    <label>Bid</label>
    <nameField>
        <label>Bid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>