force-app/main/default/objects/Bid__c/fields/Clarification_Questions_Due__c.field-meta.xml
<CustomField>
    <fullName>Clarification_Questions_Due__c</fullName>
    <label>Clarification Questions Due</label>
    <type>DateTime</type>
</CustomField>