force-app/main/default/objects/Bid__c/fields/Expression_of_Interest_Date__c.field-meta.xml
<CustomField>
    <fullName>Expression_of_Interest_Date__c</fullName>
    <label>Expression of Interest Date</label>
    <type>DateTime</type>
</CustomField>