force-app/main/default/objects/Bid__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Clarification_Questions_Due__c</columns>
    <columns>Expression_of_Interest_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>